Fixed issue with wrong background color for some input fields in light mode

--- a/src/app/flour-blend/flour-blend.scss
+++ b/src/app/flour-blend/flour-blend.scss
@@ -131,6 +131,9 @@
     padding: 6px 8px;
     font-size: 15px;
     text-align: right;
+    background: var(--surface);
+    color: var(--text);
+    font-family: var(--font);
 
     &:focus {
         outline: none;
@@ -212,6 +215,9 @@
 
 .adj-input {
     width: 80px;
+    background: var(--surface);
+    color: var(--text);
+    font-family: var(--font);
 }
 
 .hydration-summary {
@@ -244,6 +250,9 @@
     font-size: 15px;
     margin-top: 3px;
     box-sizing: border-box;
+    background: var(--surface);
+    color: var(--text);
+    font-family: var(--font);
 
     &:focus {
         outline: none;
